fixed number input minimum

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form id="book-add">
             <input type="text" name="title" class="bar" placeholder="Book Title">
             <input type="text" name="author" class="bar" placeholder="Author">
-            <input type="number" name="pages" class="bar" placeholder="How many pages?">
+            <input type="number" name="pages" class="bar" placeholder="How many pages?" min="1">
             <input type="text" name="thumbnail" class="bar" placeholder="Thumbnail URL">
             <input type="checkbox" class="checkbox" name="read">
             <button class="add-button">+ Add Book</button>
